# fifa-wc-predictor

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/fifa_predictor/: __init__.py
src/fifa_predictor/data/: __init__.py  fetch_elo.py  fetch_odds.py  fetch_results.py
src/fifa_predictor/model/: __init__.py  dixon_coles.py  knockout.py  monte_carlo.py  poisson_inversion.py  simulate.py  standings.py  vig_removal.py
src/fifa_predictor/utils/: __init__.py  compare.py  display.py  logging_config.py
tests/: smoke_test.py  test_compare.py  test_display.py  test_fetch_odds.py  test_fetch_results.py  test_knockout.py  test_monte_carlo.py  test_poisson_inversion.py  test_simulate.py  test_standings.py  test_vig_removal.py
